fixed contact item to horizontal scroll and image container of offer and aboutUs

--- a/src/components/HomePages/AboutUs/AboutUs.css
+++ b/src/components/HomePages/AboutUs/AboutUs.css
@@ -35,12 +35,18 @@
 }
 
 @media (max-width: 700px) {
+    .bg-image {
+        /* border-top-left-radius: 5rem;
+        border-top-right-radius: 5rem;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0; */
+        border-radius: 5rem 5rem 0 0;
+    }
 }
 
 @media (max-width: 600px) {
     .bg-image {
-        height: 75vh;
-        width: 100%;
+        border-radius: 7rem 7rem 0 0;
     }
 }
 
