--- a/src/components/HomePages/Footer/Footer.css
+++ b/src/components/HomePages/Footer/Footer.css
@@ -73,3 +73,12 @@
         font-size: 1.4rem;
     }
 }
+
+@media (max-width: 700px) {
+}
+
+@media (max-width: 600px) {
+}
+
+@media (max-width: 500px) {
+}
